fix: goalList 데이터 편집 및 권한 설정